[tool.poetry]
name = "hardwario-cloud"
version = "1.0.0"
description = "HARDWARIO CLOUD"
authors = ["Karel Blavka <karel.blavka@hardwario.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hardwario/py-hardwario-cloud"
repository = "https://github.com/hardwario/py-hardwario-cloud"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console"
]

packages = [
    { include = "hardwario", from = "src" },
]

exclude = [
    "**/*.pyc",
    "**/*.pyi",
]

include = [
    "LICENSE",
]

[tool.poetry.scripts]
# cloud = "hardwario.chester.cli:main"

[tool.poetry.dependencies]
python = ">=3.7, <4"
click = ">=8.1.3"
hardwario-common = "^1.7.2"
requests = "^2.28.1"
PyYAML = ">=6.0"
loguru = "^0.6.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
#hardwario-common = {path = "../py-hardwario-common", develop = true}
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
